src/objects/Training_Path__c.object
<CustomObject>
    <fields>
        <fullName>Badge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge</label>
        <referenceTo>Badge__c</referenceTo>
        <relationshipLabel>Training Paths</relationshipLabel>
        <relationshipName>Training_Paths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hours_Between_Attempts__c</fullName>
        <label>Hours Between Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <description>2 or 3 letter abbreviation of the namespace the path belongs to.</description>
        <label>Namespace</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>Steps_Completed__c /  Step_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Step_Count__c</fullName>
        <label>Step Count</label>
        <summaryForeignKey>Training_Step__c.Training_Path__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steps_Completed__c</fullName>
        <label>Steps Completed</label>
        <summaryFilterItems>
            <field>Training_Step__c.Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Step__c.Training_Path__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Brief summary of the path.</description>
        <label>Summary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <description>Comma separated list of topics for the training path.</description>
        <label>Topics</label>
        <type>TextArea</type>
    </fields>
    <label>Training Path</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>